fix: products on safari

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1352,9 +1352,10 @@ a.product__text {
 /* Product-thumbnail snippet */
 
 .product-media-container {
-  --aspect-ratio: var(--preview-ratio);
-  --ratio-percent: calc(1 / var(--aspect-ratio) * 100%);
+  /* --aspect-ratio: var(--preview-ratio); */
+  /* --ratio-percent: calc(1 / var(--aspect-ratio) * 100%); */
   position: relative;
+  aspect-ratio: 4/5;
   width: 100%;
   height: 100%;
   max-width: calc(100% - calc(var(--media-border-width) * 2));
